--- a/hangman.css
+++ b/hangman.css
@@ -125,3 +125,14 @@ h1 {
 .notification-container.show{
     transform: translateY(-50px);
 }
+
+.footer {
+    text-align: center;
+    width: 100%;
+    margin: 50px 0;
+}
+
+.footer a {
+    text-decoration: none;
+    color: #fff;
+}
